--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,14 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Ventas
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-12.8.1.jre11.jar=librerias\\mssql-jdbc-12.8.1.jre11.jar
+file.reference.mssql-jdbc-12.8.1.jre11.jar-1=src\\librerias\\mssql-jdbc-12.8.1.jre11.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mssql-jdbc-12.8.1.jre11.jar}
+    ${file.reference.mssql-jdbc-12.8.1.jre11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:deprecation
 javac.deprecation=false
@@ -51,8 +51,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=23
-javac.target=23
+javac.source=22
+javac.target=22
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -99,7 +99,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_22
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
